compiler/lume_parser/src/snapshots/lume_parser__parser__tests__new_snapshots@array.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"let _ = new [A](a);\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: "void",
                        location: Location(
                            13..17,
                        ),
                    },
                ),
            ),
            block: Block {
                statements: [
                    VariableDeclaration(
                        VariableDeclaration {
                            name: Identifier {
                                name: "_",
                                location: Location(
                                    24..25,
                                ),
                            },
                            variable_type: None,
                            value: New(
                                New {
                                    name: Array(
                                        ArrayType {
                                            element_type: Scalar(
                                                ScalarType {
                                                    name: "A",
                                                    location: Location(
                                                        33..34,
                                                    ),
                                                },
                                            ),
                                            location: Location(
                                                32..35,
                                            ),
                                        },
                                    ),
                                    arguments: [
                                        Variable(
                                            Variable {
                                                name: Identifier {
                                                    name: "a",
                                                    location: Location(
                                                        36..37,
                                                    ),
                                                },
                                            },
                                        ),
                                    ],
                                    location: Location(
                                        28..37,
                                    ),
                                },
                            ),
                            location: Location(
                                20..39,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..41,
                ),
            },
            location: Location(
                0..41,
            ),
        },
    ),
]
