compiler/lume_parser/src/snapshots/lume_parser__parser__tests__new_snapshots@namespaced.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"let _ = new std::io::File(a);\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: Path {
                            name: Identifier {
                                name: "void",
                                location: Location(
                                    13..17,
                                ),
                            },
                            root: NamespacePath {
                                path: [],
                                location: Location(
                                    0..0,
                                ),
                            },
                            location: Location(
                                13..17,
                            ),
                        },
                    },
                ),
            ),
            block: Block {
                statements: [
                    VariableDeclaration(
                        VariableDeclaration {
                            name: Identifier {
                                name: "_",
                                location: Location(
                                    24..25,
                                ),
                            },
                            variable_type: None,
                            value: New(
                                New {
                                    name: Scalar(
                                        ScalarType {
                                            name: Path {
                                                name: Identifier {
                                                    name: "File",
                                                    location: Location(
                                                        41..45,
                                                    ),
                                                },
                                                root: NamespacePath {
                                                    path: [
                                                        Identifier {
                                                            name: "std",
                                                            location: Location(
                                                                32..35,
                                                            ),
                                                        },
                                                        Identifier {
                                                            name: "io",
                                                            location: Location(
                                                                37..39,
                                                            ),
                                                        },
                                                    ],
                                                    location: Location(
                                                        32..39,
                                                    ),
                                                },
                                                location: Location(
                                                    41..45,
                                                ),
                                            },
                                        },
                                    ),
                                    arguments: [
                                        Variable(
                                            Variable {
                                                name: Identifier {
                                                    name: "a",
                                                    location: Location(
                                                        46..47,
                                                    ),
                                                },
                                            },
                                        ),
                                    ],
                                    location: Location(
                                        28..47,
                                    ),
                                },
                            ),
                            location: Location(
                                20..49,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..51,
                ),
            },
            location: Location(
                0..51,
            ),
            documentation: None,
        },
    ),
]
