compiler/lume_parser/src/snapshots/lume_parser__parser__tests__range_snapshots@expr_inclusive.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"let _ = (a..=b);\")"
---
[
    VariableDeclaration(
        VariableDeclaration {
            name: Identifier {
                name: "_",
                location: Location(
                    4..5,
                ),
            },
            variable_type: None,
            value: Range(
                Range {
                    lower: Variable(
                        Variable {
                            name: Identifier {
                                name: "a",
                                location: Location(
                                    9..10,
                                ),
                            },
                        },
                    ),
                    upper: Variable(
                        Variable {
                            name: Identifier {
                                name: "b",
                                location: Location(
                                    13..14,
                                ),
                            },
                        },
                    ),
                    inclusive: true,
                    location: Location(
                        9..14,
                    ),
                },
            ),
            location: Location(
                0..16,
            ),
        },
    ),
]
